# ascension

./: .gitignore  docker-compose.yml
backend/: Dockerfile  alembic.ini  app.db  commands.py  pyproject.toml  start.sh
backend/app/: config.py  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 07fdddf39040_initial_migration.py  15f6abd99fa5_initial_migration.py  c22fac098184_initial_migration.py
backend/app/models/: __init__.py  base.py  quiz.py  role.py  user.py
backend/app/routers/: __init__.py
backend/app/routers/api/: __init__.py  auth.py  payment.py  quiz.py  user.py
backend/app/routers/web/: __init__.py  auth.py  dashboard.py
backend/app/routers/web/templates/: 404.jinja  base.jinja  feedback.jinja  forgot_password.jinja  home.jinja  login.jinja  password_reset_email.jinja  payment_redirect.jinja  quiz.jinja  reset_password.jinja  signup.jinja
backend/app/schemas/: __init__.py  auth.py  data_table.py  payment.py  quiz.py  user.py
backend/app/services/: auth.py  db.py  exceptions.py  mail.py  stripe.py  templates.py
backend/app/static/css/: main.css
backend/app/static/data/zWPa15oNvBxkEfulAqRQZOL/: feedback.json  questions.json
backend/app/static/js/: index.js  main.js
backend/app/utils/: __init__.py  auth.py
frontend/: Dockerfile  app.vue  error.vue  nuxt.config.ts  package-lock.json  package.json
frontend/composables/: useAPI.ts  useDataTable.ts  useSocketio.ts
frontend/layouts/: auth.vue  dashboard.vue
frontend/middleware/: auth.global.ts
frontend/pages/: index.vue  login.vue
frontend/plugins/: api.ts
(+27 files in other folders)
